--- a/linear.algebra.matrix.interpreter/.classpath
+++ b/linear.algebra.matrix.interpreter/.classpath
@@ -4,5 +4,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/linear.algebra.matrix"/>
 	<classpathentry kind="lib" path="/opt/eclipse/plugins/com.google.inject_3.0.0.v201312141243.jar"/>
+	<classpathentry kind="lib" path="/opt/eclipse/plugins/org.eclipse.emf.common_2.9.2.v20131212-0545.jar"/>
+	<classpathentry kind="lib" path="/opt/eclipse/plugins/org.eclipse.emf.ecore_2.9.2.v20131212-0545.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
