--- a/linear.algebra.matrix/build.properties
+++ b/linear.algebra.matrix/build.properties
@@ -1,7 +1,8 @@
 source.. = src/,\
            src-gen/,\
            xtend-gen/,\
-           xsemantics-gen/
+           xsemantics-gen/,\
+           emf-gen/
 bin.includes = model/,\
                META-INF/,\
                .,\
