--- a/linear.algebra.matrix/build.properties
+++ b/linear.algebra.matrix/build.properties
@@ -6,5 +6,6 @@ source.. = src/,\
 bin.includes = model/,\
                META-INF/,\
                .,\
-               plugin.xml
+               plugin.xml,\
+               jsr305-1.3.9.jar
 output.. = bin/
