--- a/linear.algebra.matrix/.classpath
+++ b/linear.algebra.matrix/.classpath
@@ -7,7 +7,7 @@
 	<classpathentry kind="src" path="src-gen"/>
 	<classpathentry kind="src" path="xtend-gen"/>
 	<classpathentry kind="src" path="emf-gen"/>
-	<classpathentry kind="lib" path="/opt/eclipse/plugins/guice-assistedinject-3.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="guice-assistedinject-3.0.jar"/>
 	<classpathentry kind="lib" path="jsr305-1.3.9.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
