--- a/linear.algebra.matrix/build.properties
+++ b/linear.algebra.matrix/build.properties
@@ -7,5 +7,6 @@ bin.includes = model/,\
                META-INF/,\
                .,\
                plugin.xml,\
-               jsr305-1.3.9.jar
+               jsr305-1.3.9.jar,\
+               guice-assistedinject-3.0.jar
 output.. = bin/
